--- a/ex002/index.html
+++ b/ex002/index.html
@@ -9,7 +9,27 @@
 <body>
     <h1>Parágrafos e quebras de linha</h1>
     <hr>
-    <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt; </p>
+    <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt; <!-- less than / greater than --> </p>
     <p>Se precisar quebrar o texto em algum lugar específico <br> como esse, basta você usar a tag &lt;br&gt;</p>
+    <hr>
+    <p>Vamos adicionar alguns símbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &dollar;
+        &yen;
+        &cent;
+        &real;
+        &delta;
+        &Delta;
+        &uparrow;
+        &uarr;
+    </p>
+    <p>Vamos adicionar alguns emoji:
+        &#x1F596;
+        &#x1F913;
+    </p>
 </body>
 </html>
