--- a/ex008/index.html
+++ b/ex008/index.html
@@ -5,14 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formatação de textos</title>
+    <style>
+        mark{
+            background-color: lime;
+        }
+    </style>
 </head>
 <body>
     <h1>Principais Formatações</h1>
     <h2>Negrito / Destaque</h2>
-    <p>Nesta frase temos um <b> termo em destaque</b> usando a tag &gt; b &lt; (não semântica)</p>
-    <p>Nesta frase, tenho um <strong> termo em destaque</strong> usando a tag &gt; strong &lt; (semântica)</p>
+    <p>Nesta frase temos um <b> termo em destaque</b> usando a tag &gt; b &lt; (não semântica).</p>
+    <p>Nesta frase, tenho um <strong> termo em destaque</strong> usando a tag &gt; strong &lt; (semântica).</p>
     <h2>Itálico / Ênfase</h2>
-    <p>Nesta frase, temos um <i> termo em itálico</i> usando a tag &gt; i &lt; ( não semântica)</p>
-    <p> Nesta frase, temos um <em>termo em ênfase</em>  usando a tag &gt; EM &lt; (semântica) </p>
+    <p>Nesta frase, temos um <i> termo em itálico</i> usando a tag &gt; i &lt; ( não semântica).</p>
+    <p> Nesta frase, temos um <em>termo em ênfase</em>  usando a tag &gt; EM &lt; (semântica). </p>
+    <h2>Texto Marcado</h2>
+    <p>Podemos criar também <mark> um texto marcado </mark> usando a tag &gt; MARK &lt;.</p>
+    <p>e no outro parágrafo, temos <mark>outro texto marcado</mark> no final.</p>
+    <h2>Texto grande e pequeno</h2>
+    <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo.</p>
+    <h2>Texto Deletado</h2>
+    <p>Podemos marcar <del> um texto como  excluído </del>para indicar que ele deve ser lido, mas não considerado.</p>
+    <h2>Texto inserido</h2>
+    <p>Podemos marcar <ins> um texto como inserido</ins> para dar uma ênfase e indicar que ele foi adicionado depois.</p>
+    <p>Existe também o <u>sublinhado</u> com a tag &gt; U &lt; (não semântica).</p>
+    <h2>Texto sobrescrito</h2>
+    <p>Para inserir coisas do tipo x<sup>20</sup>+3</p>
+    <h2>Texto subscrito</h2>
+    <p>Para inserir coisas do tipo H<sub>2</sub>O</p>
 </body>
 </html>
