--- a/ex010/index.html
+++ b/ex010/index.html
@@ -9,8 +9,13 @@
 <body>
     <h1>Usando links externos</h1>
     <p>Você pode acessar o meu <a href="https://github.com/DaviMacielCavalcante" target="_blank" rel="external"> repositório público no Github</a></p>
-    <h2>Usando links internos</h2>
+    <h1>Usando links internos</h1>
     <p>Esta é a primeira página do meu site. Se você quiser, pode acessar também a minha <a href="pag002.html" rel="next" target="_self">segunda página</a></p>
     <p>Você também pode visitar nossa <a href="noticias/pag003.html" rel="next" target="_self">página de notícias</a></p>
+    <h1>Links para download</h1>
+    <ul>
+        <li><a href="livro/meulivro.pdf" download="meulivro.pdf" type="application/pdf">Baixar o livro em pdf</a></li>
+        <li><a href="livro/meulivro.zip" download="meulivro.zip" type="application/zip">Baixar o livro compactado em ZIP</a></li>
+    </ul>
 </body>
 </html>
