capítulo 11 quase finalizado

--- a/ex011/index.html
+++ b/ex011/index.html
@@ -14,5 +14,18 @@
         <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="imagem flexível">
     </picture>
+
+    <h1>Reproduzindo áudios</h1>
+    <p>Vamos aprender a reproduzir áudio em HTML5</p>
+    <audio src="midia/Sailing - Telecasted.mp3" controls autoplay loop></audio>
+    <!--MP3 WAV OGG-->
+
+    <audio preload="metadata" controls>
+        <source src="midia/03 - More Than A Feeling.mp3" type="audio/mpeg">
+        <source src="midia/03 - More Than A Feeling.ogg" type="audio/ogg">
+        <source src="midia/03 - More Than A Feeling.wav" type="audio/wav"> 
+        <p>Infelizmente seu navegador não consegue reproduzir o áudio. <a href="midia/03 - More Than A Feeling.mp3">Clique aqui para baixar o arquivo MP3</a> </p>
+    </audio>
+
 </body>
 </html>
