--- a/ex021/caixa01.html
+++ b/ex021/caixa01.html
@@ -6,28 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Caixas</title>
     <style>
-        h1 {
+        h1 { /* box-level */
             background-color: aliceblue;
             height: 300px;
-            width: 300px;
-            border-width: 10px;
-            border-style: solid;
-            border-color: darkslategray;
-            
-            padding-top: 10px;
-            padding-right: 10px;
-            padding-bottom: 10px;
-            padding-left: 10px;
-        }
-        a {
-            border-width: 10px;
-            border-style: dashed;
-            border-color: rebeccapurple;
+            width: 300px;          
 
-            padding-top: 10px;
-            padding-right: 10px;
-            padding-bottom: 10px;
-            padding-left: 10px;
+            border: 10px solid darkslategray;           
+
+            padding: 10px;
+
+            margin: 20px auto 40px auto;
+
+            outline: 5px dashed salmon;
+        }
+        a { /* inline-level*/
+            border: 10px dashed rebeccapurple;
+
+            padding: 10px;
         }
     </style>
 </head>
