inicio do desafio 10

--- a/ex021/caixa02.html
+++ b/ex021/caixa02.html
@@ -16,6 +16,12 @@
             padding: 10px;
             margin: 10px;
         }
+        main {
+            background-color: white;
+            padding: 10px;
+            margin: 10px;
+            border-radius: 10px;
+        }
         nav {
             background-color: lightslategray;
             padding: 3px;
@@ -46,6 +52,7 @@
         footer > p {
             margin: 0px;
         }
+        
     </style>
 </head>
 <body>
