--- a/desafios/desafio10/pacote-projeto-d010/desafio10.html
+++ b/desafios/desafio10/pacote-projeto-d010/desafio10.html
@@ -28,7 +28,7 @@
         
             <h2>A PRIMEIRA VERSÃO</h2>
 
-            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://danmorrill.org/" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://danmorrill.org/" target="_blank" class="externo">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
             <picture>
                 <source media="(max-width: 600px)" srcset="imagens/dan-droids-pq.png">
@@ -39,7 +39,7 @@
         
             <h2>SURGE UM NOVO MASCOTE</h2>
 
-            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" class="externo">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <picture>
                 <source media="(max-width: 600px)" srcset="imagens/irina-blok-pq.jpg">
@@ -52,10 +52,12 @@
 
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
-            <video controls>
-                <source src="../The next evolution of Android.mp4" type="video/mp4">
-                <p>Infelizmente seu navegador não compatibilidade com a reprodução de vídeos.</p>
-            </video>   
+            <div class="video">
+                <video controls>
+                    <source src="../The next evolution of Android.mp4" type="video/mp4">
+                    <p>Infelizmente seu navegador não compatibilidade com a reprodução de vídeos.</p>
+                </video>
+            </div>
 
         </article>
         <aside>
@@ -83,7 +85,7 @@
 
             <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>         
 
-            <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>  
+            <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank" class="externo">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>  
 
         </aside>
         <article>
