--- a/ex022/fundo001.html
+++ b/ex022/fundo001.html
@@ -23,6 +23,9 @@
         div#q3{
             background-image: url('imagens/pattern001.png');
         }
+        body {
+            background-image: url('imagens/pattern004.png');
+        }
     </style>
 </head>
 <body>
