--- a/ex024/iframe001.html
+++ b/ex024/iframe001.html
@@ -5,16 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe{
+            width: 400px;
+            height: 400px;
+            border: 1px dashed black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
     <p>Acessando o site do 
         
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" scolling="no">
+            <a href="http://www.curspemvideo.com" target="_blank">Curso em Vídeo</a>
+        </iframe>
         
         para aprender a programar</p>
     <p>
         O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> também é muito legal
+    </p>
+    <p>
+        O repositório do Guanabara
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+           no <a href="https://gustavoguanabara.github.io" target="_blank">Github</a>
+        </iframe>
+
+        também é bem legal!
     </p>
 </body>
 </html>
